Add background color and text color to submit button

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,5 +19,9 @@ body {
 }
 .first{
     text-align: center;
-   
+   }
+
+   button{
+       background-color: green;
+       color: honeydew;
    }
