--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,9 +19,12 @@ body {
 }
 .first{
     text-align: center;
+    width: 1000px;
+    margin: 5%;
    }
 
    button{
        background-color: green;
        color: honeydew;
+      
    }
